RESOLVED FIXED 280326
Fix Wasm LLInt's marshalling of i32 args to JS
https://bugs.webkit.org/show_bug.cgi?id=280326
Summary Fix Wasm LLInt's marshalling of i32 args to JS
Ross Kirsling
Reported 2024-09-25 01:28:16 PDT
.
Attachments
Ross Kirsling
Comment 1 2024-09-25 01:40:20 PDT
EWS
Comment 2 2024-09-25 21:35:32 PDT
Committed 284262@main (f4cd23d010b7): <https://commits.webkit.org/284262@main> Reviewed commits have been landed. Closing PR #34218 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-25 21:36:16 PDT
Note You need to log in before you can comment on or make changes to this bug.